# video-voice-separate

./: .gitignore  README.en.md  README.md  package-lock.json  pyproject.toml
docs/: README.md  project-optimization-analysis.md  speaker-aware-dubbing-plan.md  speaker-aware-dubbing-task-breakdown.md  subtitle-composition-design.md  task-a-speaker-attributed-transcription.md  task-a-test-report.md  task-c-dubbing-script-generation.md  task-d-test-report.md  task-e-test-report.md
docs/superpowers/plans/: 2026-04-15-frontend-i18n.md  2026-04-15-frontend-workflow-graph-visualization.md  2026-04-15-readme-redesign.md  2026-04-15-template-dag-workflow-core.md  2026-04-15-template-dag-workflow-execution-roadmap.md  2026-04-16-atomic-tools.md  (+3 more)
frontend/: eslint.config.js  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
src/translip/: __init__.py  cli.py  config.py  speaker_embedding.py  types.py
src/video_voice_separate/: __init__.py  __main__.py  cli.py  config.py  types.py
tests/: test_asr_ocr_correction.py  test_atomic_tools_api.py  test_atomic_tools_job_manager.py  test_atomic_tools_registry.py  test_cli.py  test_delivery.py  test_delivery_routes.py  test_diarization_pipeline.py  test_dubbing.py  test_dubbing_review_routes.py  test_orchestration.py  test_package_compatibility.py  test_rendering.py  test_repair.py  test_server_app.py  test_server_graph.py  test_system_routes.py  test_task_config_normalization.py  test_task_read_models.py  test_transcription.py  test_transcription_benchmark.py  test_translation.py  test_voice_bank.py  test_workflow_graph.py
tests/e2e/: dubbing-editor-live-fit.spec.ts  dubbing-editor-playback-rate.spec.ts
tests/test_atomic_tools_adapters/: test_mixing_adapter.py  test_muxing_adapter.py  test_probe_adapter.py  test_separation_adapter.py  test_transcript_correction_adapter.py  test_transcription_adapter.py  test_translation_adapter.py  test_tts_adapter.py
(+153 files in other folders)
